sec:Meth: Div. corrections

--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -58,7 +58,7 @@ Die Autoren \citeA{Levenstein1993} schlagen vor, das Instrument für Untersuchun
 
 Durch die Validierung und Übersetzung des originalen Fragebogens ins Deutsche, wurden die ursprünglich 30 Items, basierend auf der durchgeführten exploratorischen Faktorenanalyse, auf 20 reduziert. Dadurch entstand die in dieser Arbeit verwendete Kurzversion dieses Fragebogens. Das Verfahren ist im \enquote{Elektronischen Testarchiv} des ZPID enthalten kann für nichtkommerzielle Forschungs- und Unterrichtszwecke kostenlos eingesetzt werden \cite{ZPID}. Ebenso konnten die ursprünglich siebenfaktorielle Zuordnung der Items nicht beibehalten werden. Folgende vier Skalen blieben dabei übrig: (1) Sorgen, (2) Anspannung, (3) Freude und (4) Anforderungen. Diese Veränderungen sind nachvollziehbar und bei \citeA{Fliege2001} ausführlich dokumentiert. Die Einschätzung erfolgt über eine viertstufige Likertskale, die von 1 für \textit{fast nie}, über 2 für \textit{manchmal}, 3 für \textit{häufig} bis zu 4 für \textit{meistens} reicht. Bei den Items handelt es sich um Feststellungen, die von der Testperson beurteilt werden sollen (siehe dazu auch Anhang \titleref{app:PSQ}. 
 
-Die Operationalisierung erfolgte anhand der Anleitung von \citeA{Naescher2009}. Dabei wurden die Indizes der vier Skalen Sorgen, Anspannung, Freude und Anforderungen erstellt (siehe \titleref{eq:PSQIndexSorgen}, \titleref{eq:PSQIndexAnspannung}, \titleref{eq:PSQIndexFreude} und \titleref{eq:PSQIndexAnforderung}). 
+Die Operationalisierung erfolgte anhand der Anleitung von \citeA{Naescher2009}. Dabei wurden die Indizes der vier Skalen Sorgen, Anspannung, Freude und Anforderungen mit Hilfe der Mittelwertsbildung erstellt (siehe \titleref{eq:PSQIndexSorgen}, \titleref{eq:PSQIndexAnspannung}, \titleref{eq:PSQIndexFreude} und \titleref{eq:PSQIndexAnforderung}). Dazu werden die jeweiligen Items der zugehörigen Skala aufaddiert und durch deren Anzahl dividiert. Hohe Werte in einer Skala bedeuten jeweils auch eine hohe Ausprägung der betreffenden Eigenschaft.
 
 %Formel
 \begin{equation}\label{eq:PSQIndexSorgen}
@@ -74,9 +74,11 @@ Die Operationalisierung erfolgte anhand der Anleitung von \citeA{Naescher2009}. 
     PSQ~I_{Anforderung}=\frac{\frac{PSQ_{02}+PSQ_{03}+PSQ_{11}+(5-PSQ_{19})+PSQ_{20}}{5}-1}{3}*100
 \end{equation}
 
-Die Werte der Items jeder Skala werden aufaddiert und durch die Anzahl der Items dividiert, um den Mittelwert zu erhalten. Anschliessend wird eine lineare Transformation des Skalenranges von 1 bis 4 zu 1 bis 3 vorgenommen, indem vom Mittelwert 1 subtrahiert wird. Die weitere lineare Transformation mittels Division durch 3 ergibt einen Wert zwischen 0 und 1, welcher multipliziert mit 100 ein Skalenrange zwischen 0 und 100 ergibt. Zu beachten ist, dass bei gewissen Items der Wert des Items von 5 abgezogen werden muss, bevor das Ergebnis mit den Werten der anderen Items in die Berechnung eingeht (im Anhang \titleref{app:PSQ} mit einem * gekennzeichnet). Hierbei handelt es sich um die drei Items $PSQ_{01}$, $PSQ_{06}$ und $PSQ_{19}$. Hohe Werte in einer Skala bedeuten jeweils auch eine hohe Ausprägung der betreffenden Eigenschaft.
+Zu beachten ist, dass gewisse Items für die Berechnung der Indizes umkodiert werden müssen. Hierbei handelt es sich um die drei Items $PSQ_{01}$, $PSQ_{06}$ und $PSQ_{19}$ (im Anhang \titleref{app:PSQ} mit einem * gekennzeichnet).
 
-Für den Gesamtscore wird die Skala Freude umkodiert:
+Zudem wird von \citeA{Naescher2009} eine Skalenrange-Transformation von 0 bis 100 vorgeschlagen. Dazu wird aus dem Mittelwert der Skala mit dem Skalenranges von 1 bis 4 durch Subtraktion von 1 eine lineare Transformation zu 0 bis 3 vorgenommen. Die weitere lineare Transformation mittels Division durch 3 ergibt einen Wert zwischen 0 und 1, welcher multipliziert mit 100 ein Skalenrange zwischen 0 und 100 ergibt.  
+
+Für den Gesamtscore muss die Skala Freude umkodiert werden:
 
 %Formel
 \begin{equation}\label{eq:PSQGesamtscore}
