Finish on Friday 1.6.

--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -93,7 +93,7 @@ Die Erfassung des subjektiven Wohlbefindens erfolgte anhand dem von \citeA{Lyubo
 \citeA{Lyubomirsky1999} weisen darauf hin, dass der SHS sich für die Erfassung des subjektiven Wohlbefindens besser eignet als andere vergleichbare Instrumente (z.B.: \textit{Affect Balance Scale} oder \textit{the Satisfaction With Life Scale}), da der Fragebogen eine globale subjektive Einschätzung bezügliche Wohlbefinden vornimmt, im Gegensatz zur Erfassung von eigentlichen Glückszuständen, die einer bestimmte Zeitspanne zuzuordnen sind (z.B.: affektive und kognitive Zustände). Der Fragebogen wurde in 14 Studien mit einem Total von 2,732 Teilnehmern validiert. Die Daten wurden innerhalb der vereinigten Staaten anhand von Studenten zweier Universitäten und einer Mittelschule, von Erwachsenen innerhalb zweier Städten in Kalifornien   erhoben. Zudem wurden Teilnehmer aus Moswkau, Russland beigezogen. Demzufolge soll der SHS eine hohe interne Konsistenz aufweisen, welche über alle Stichproben stabil blieben. Die Test-Retest-Korrelation und die Korrelation zwischen Eigen- und Fremdeinschätzung deuten auf eine gute bis sehr gute Realiabilität hin. 
 Zudem deute die Konstruktvalidität darauf hin, dass der Fragebogen auch wirklich das Konstrukt subjektives Wohlbefinden misst (vgl. ebd.). \citeA{Swami2009} konnten in ihrer Studie nachweisen, dass es sich bei der deutschen Übersetzung um eine unidimensionale Struktur, mit einer hohen internen Konsitenz handelt. Diese Übersetzung korrelierte hoch mit anderen Messinstrumenten, welche das subjektive Wohlbefinden erfassen. Demzufolge habe der neue Fragebogen eine gute Konvergenzvalidität. Hingegen konnten die Forscher keine Aussage über die Test-Retest-Reliabilität machen, noch nahmen sie eine Validierungsprüfung vor, da dies nicht zum Gegenstand ihrer Überprüfung zählte (vgl. ebd.).
 
-Die Operationalisierung erfolgt anhand der Mittelwertsbildung der vier Items \cite{Lyubomirsky1999} und ergibt einen SHS-Index (siehe \titleref{eq:SHS}. Die mögliche Ausprägung dieses Index reicht von 1.0 bis 7.0, wobei eine höhere Ausprägung für ein grössere subjektive Zufriedenheit steht.
+Die Operationalisierung erfolgt anhand der Mittelwertsbildung der vier Items \cite{Lyubomirsky1999} und ergibt einen SHS-Index (siehe \titleref{eq:SHS}). Die mögliche Ausprägung dieses Index reicht von 1.0 bis 7.0. Eine hohe Ausprägung steht für ein hohe subjektive Zufriedenheit.
 
 %Formel
 \begin{equation}\label{eq:SHS}
