sec.Methode: Stichproben Beschreibung (Anahng)

--- a/content/3_ergebnisse.tex
+++ b/content/3_ergebnisse.tex
@@ -1,4 +1,6 @@
 \subsection{Vorbereitung der Daten und deskriptive Analysen}
+\subsubsection{Bindung anhand AAS}
+\textit{TBD: Klassifizierung und Aufteilung in Sicher und Unsicher}.
 
 % ---------------------------------------
 \subsection{Hypothesentest} \label{sec:Hypothesentest}
