--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -112,7 +112,7 @@ Die Rekrutierung fand an folgenden Orten und Institutionen statt (für eine deta
 \subsection{Beschreibung der Stichprobe}
 Insgesamt schlossen brutto 248 Personen die Umfrage ab. 1454 Personen sind zumindest auf die erste Seite gekommen und haben anschliessend abgebrochen. Dies entspricht einer Beendingungsquote von 17.06\%. Die meisten Abbrüche sind auf der Startseite mit 1045 zu verzeichnen (71.87\%), gefolgt von den demografischen Daten mit 100 (6.88\%) und Medien und Mediennutzung mit 44 (3\%). Die mittlere Bearbeitungszeit des Fragebogens dauerte 27 Minuten. 
 
-Nach der Datenbereinigung blieben netto 243 Personen übrig. Zwei Personen wurden ausgemustert, da sie beim Jahrgang fehlerhafte Werte angegeben hatten (Person1 = Jg 2017, Person2 = Jg 0). Eine weitere Person wurde aus dem Datensatz gelöscht, da die Person angegeben hatte, die Umfrage nicht seriös ausgefüllt zu haben. Zwei Personen mussten entfernt werden, da der Fragebogen bei der Medienzeit in Minuten Text zugelassen hat und die Personen mit Ja und Nein geantwortet haben.
+Nach der Datenbereinigung blieben netto 243 Personen übrig. Zwei Personen wurden ausgemustert, da sie beim Jahrgang fehlerhafte Werte angegeben hatten (Person1 = Jg 2017, Person2 = Jg 0). Eine weitere Person gab an, die Umfrage nicht seriös ausgefüllt zu haben. Zwei Personen mussten entfernt werden, da die Personen bei der Angabe der Mediennutzungszeit in Minuten mit Ja und Nein geantwortet haben.
 
 Die Merkmale Geschlecht, Alter (in Jahren), etc. sind in Tabelle \ref{table:Stichprobe} dargestellt.
 
@@ -122,8 +122,6 @@ Die Merkmale Geschlecht, Alter (in Jahren), etc. sind in Tabelle \ref{table:Stic
   \hline
   \multicolumn{2}{l}{\textbf{Merkmal}} & \textbf{$n$ (\%)} \\
   \hline
-  \multicolumn{2}{l}{Total Probanden} \\
-  & bereinigt & 243\\
   \multicolumn{2}{l}{Geschlecht} \\ 
    & weiblich & 222 (91.4)\\ 
    & männlich & 20 (8.2)\\ 
@@ -136,7 +134,7 @@ Die Merkmale Geschlecht, Alter (in Jahren), etc. sind in Tabelle \ref{table:Stic
   \hline
   &&\\
 \end{tabular}
-\caption{Gesamtstichprobe}
+\caption{Stichprobe}
 \label{table:Stichprobe}
 \end{table}
 
