--- a/main.tex
+++ b/main.tex
@@ -87,6 +87,12 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \appendix 
 \renewcommand{\appendixname}{Anhang} 
 
+% Stichprobe
+% AAS Fragebogen
+\section{Gesamtstichprobe}\label{app:Gesamtstichprobe}
+\input{content/Anhang/Stichprobe.tex}
+\newpage
+
 % AAS Fragebogen
 \section{Die Adult Attachment Scale (AAS)}\label{app:AAS}
 \input{content/Anhang/AAS.tex}
