sec.Methode: Stichprobe beschrieben

--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -112,32 +112,47 @@ Die Rekrutierung fand an folgenden Orten und Institutionen statt (für eine deta
 \subsection{Beschreibung der Stichprobe}
 Insgesamt schlossen brutto 248 Personen die Umfrage ab. 1454 Personen sind zumindest auf die erste Seite gekommen und haben anschliessend abgebrochen. Dies entspricht einer Beendingungsquote von 17.06\%. Die meisten Abbrüche sind auf der Startseite mit 1045 zu verzeichnen (71.87\%), gefolgt von den demografischen Daten mit 100 (6.88\%) und Medien und Mediennutzung mit 44 (3\%). Die mittlere Bearbeitungszeit des Fragebogens dauerte 27 Minuten. 
 
-Nach der Datenbereinigung blieben netto 243 Personen übrig. Zwei Personen wurden ausgemustert, da sie beim Jahrgang fehlerhafte Werte angegeben hatten (Person1 = Jg 2017, Person2 = Jg 0). Eine weitere Person gab an, die Umfrage nicht seriös ausgefüllt zu haben. Zwei Personen mussten entfernt werden, da die Personen bei der Angabe der Mediennutzungszeit in Minuten mit Ja und Nein geantwortet haben.
+Nach der Datenbereinigung blieben netto 218 Personen übrig (87.9\%). Eine Personen wurde ausgemustert, da sie beim Jahrgang einen fehlerhaften Wert angegeben hatte (Jg 2017). Zwei weitere Person gaben an, die Umfrage nicht seriös ausgefüllt zu haben. Zwei Personen mussten entfernt werden, da die Personen bei der Angabe der Mediennutzungszeit in Minuten mit Ja und Nein geantwortet haben. 25 Personen wurden entfernt, da das Alter ihrer Kinder 13 Monate überstieg. 
 
-Die Merkmale Geschlecht, Alter (in Jahren), etc. sind in Tabelle \ref{table:Stichprobe} dargestellt.
+Die Merkmale Geschlecht, Alter in Jahren, Geschlecht Kind und Alter Kind in Jahren werden in Tabelle \titleref{table:Stichprobe} dargestellt (eine um die Merkmale Familieneinkommen, Bidlungsabschluss, Anzahl Personen im Haushalt, Lebensfrom und Fremdbeteruung in Tagen ist in Anhang \titleref{app:Gesamtstichprobe} zu finden).
 
 \begin{table}[htbp]
 
 \begin{tabular}{m{0.5em}  m{10em}  m{5em}} 
-  \hline
+  \hline\hline
   \multicolumn{2}{l}{\textbf{Merkmal}} & \textbf{$n$ (\%)} \\
   \hline
   \multicolumn{2}{l}{Geschlecht} \\ 
-   & weiblich & 222 (91.4)\\ 
-   & männlich & 20 (8.2)\\ 
-   & keine Angabe & 1 (.4)\\ 
+   & weiblich & 198 (90.8)\\ 
+   & männlich & 19 (8.7)\\ 
+   & keine Angabe & 1 (.5)\\ 
    
   \multicolumn{2}{l}{Alter in Jahren} \\
-  & $M$ (Min./Max.) & 33.9 (20/48) \\
-  & $SD$ & 4.5 \\
-   
-  \hline
+   & $M$ (Min./Max.) & 33.9 (20/48) \\
+   & $SD$ & 4.5 \\
+  
+  \multicolumn{2}{l}{Geschlecht Kind} \\
+   & weiblich & 97 (44.5)\\ 
+   & männlich & 119 (54.6)\\ 
+   & keine Angabe & 2 (.9)\\
+  
+  \multicolumn{2}{l}{Alter Kind in Monaten} \\
+   &  $M$ (Min./Max.) & 6.6 (0/12)\\
+   & $SD$ & 3.4\\
+  \hline\hline
   &&\\
 \end{tabular}
 \caption{Stichprobe}
 \label{table:Stichprobe}
 \end{table}
 
+Das Alter der Befragten liegt zwischen 20 und 48 Jahre mit einem Durchschnittsalter von 33.9 Jahren ($SD$ = 4.5). Weibliche Probanden sind mit 90.8 \% ($n$ = 198) in der Stichprobe vertreten. Das Geschlecht der Kinder ist mit 44.5\% weiblichen ($n$ = 97) und 54.6\% männlichen ($n$ = 119) Kindern vertreten. Das Alter der Kinder liegt zwischen 0 und 12 Monaten mit einem Durchschnitt von 6.6 Monaten ($SD$ = 3.4).
+
+Bei der Angabe zum Familieneinkommen (siehe Tabelle \titleref{table:Gesamtstichprobe} im Anhang \titleref{app:Gesamtstichprobe}) zeigt sich die stärkste Ausprägung bei Personen, die über ein Familieneinkommen von über CHF 104'001 und mehr verfügen mit 34.3\% ($n$ = 75), gefolgt von Familien mit einem Einkommen zwischen CHF 78'001 und CHF 104'000 mit 30.3\% ($n$ = 66) und Familien mit einem Einkommen zwischen CHF 52'000 und CHF 78'000 mit 23.9\% ($n$ = 52). 
+
+73 Personen gaben an über ein Uni oder Fachhochschultitel zu verfügen, was mit 33.5\% die höchste Ausprägung darstellt, dicht gefolgt von einem Lehrabschluss mit 23.9\% ($n$ = 52) und einem Abschluss an einer höheren Fachschule mit 22.9\% ($n$ = 50). Zusammenfassend ergibt das einen Abschluss im tertiären Bereich von 60.6\% ($n$ = 132), im Sekundar II Bereich von 36.6\% ($n$ = 79) und im Bereich der Grundschule 2.8\% ($n$ = 6).
+
+Im Durchschnitt leben zwischen 2 und 8 Personen im Haushalt mit einem Durchschnitt von 3.6 Personen ($SD$ = .8). Die dominante Lebensform stellt die verheiratete Partnerschaft mit 71.6\% ($n$ = 156) dar, gefolgt von der nicht verheirateten Partnerschaft mit 25.2\% ($n$ = 55). Die Kinder werden im Schnitt 1 Tag ($SD$ = 1.3)  zwischen 0 und 5 Tagen fremd betreut.
 
 \subsection{Empirische Hypothesen}\label{sec:EmpirischeHypothesen}
 \subsection{Statistische Analyseverfahren}
