--- a/content/Anhang/Stichprobe.tex
+++ b/content/Anhang/Stichprobe.tex
@@ -1,53 +1,81 @@
-\begin{table}[htbp]
-
-\begin{tabular}{m{0.5em}  m{20em}  m{5em}} 
+\begin{longtable}[l]{m{0.5em}  m{20em}  m{5em}} 
+  \caption{Gesamtstichprobe \label{table:Gesamtstichprobe}}\\
+  &&\\
+  \hline\hline
+  \multicolumn{2}{l}{\textbf{Merkmal}} & \textbf{$n$ (\%)} \\
+  \hline
+  \endfirsthead
+  
+  \multicolumn{3}{c}{Fortsetzung der Tabelle \ref{table:Gesamtstichprobe}}\\
   \hline
   \multicolumn{2}{l}{\textbf{Merkmal}} & \textbf{$n$ (\%)} \\
   \hline
+  \endhead
+  
+  \hline
+  \multicolumn{3}{c}{Tabelle wird auf der nächsten Seite fortgesetzt...}\\
+  \endfoot
+  
+  \hline
+  \multicolumn{3}{c}{Ende der Tabelle}\\
+  \hline\hline
+  \endlastfoot
+  
   \multicolumn{2}{l}{Geschlecht} \\ 
-   & weiblich & 222 (91.4)\\ 
-   & männlich & 20 (8.2)\\ 
-   & keine Angabe & 1 (.4)\\ 
+   & weiblich & 198 (90.8)\\ 
+   & männlich & 19 (8.7)\\ 
+   & keine Angabe & 1 (.5)\\ 
    
   \multicolumn{2}{l}{Alter in Jahren} \\
-  & $M$ (Min./Max.) & 33.8 (20/48) \\
+  & $M$ (Min./Max.) & 33.9 (20/48) \\
   & $SD$ & 4.5 \\
   
   \multicolumn{2}{l}{Geschlecht Kind} \\
-   & weiblich & 108 (44.4)\\ 
-   & männlich & 133 (54.7)\\ 
-   & keine Angabe & 2 (.8)\\
+   & weiblich & 97 (44.5)\\ 
+   & männlich & 119 (54.6)\\ 
+   & keine Angabe & 2 (.9)\\
   
   \multicolumn{2}{l}{Alter Kind in Monaten} \\
   &  $M$ (Min./Max.) & 6.6 (0/12)\\
   & $SD$ & 3.4\\
   
   \multicolumn{2}{l}{Familieneinkommen pro Jahr} \\
-  & bis CHF 26'000 & 1 (.4)\\
-  & von CHF 26'001 bis CHF 52'000 & 11 (4.5)\\
-  & von CHF 52'001 bis CHF 78'000 & 60 (24.7)\\
-  & von CHF 78'001 bis CHF 104'000 & 71 (29.2)\\
-  & von CHF 104'001 und mehr & 80 (32.9)\\
-  & keine Angabe & 20 (8.2)\\
+  & bis CHF 26'000 & 1 (.5)\\
+  & von CHF 26'001 bis CHF 52'000 & 9 (4.1)\\
+  & von CHF 52'001 bis CHF 78'000 & 52 (23.9)\\
+  & von CHF 78'001 bis CHF 104'000 & 66 (30.3)\\
+  & von CHF 104'001 und mehr & 75 (34.3)\\
+  & keine Angabe & 15 (6.9)\\
   
   \multicolumn{2}{l}{Bildungsabschluss} \\
-  & Obligatorische Grundschule & 6 (2.5)\\
-  & Lehrabschluss (Sekundär II)& 64 (26.3)\\
-  & Berufsmatura / Fachmittelschule (Sekundär II) & 21 (8.6)\\
-  & Gymnasiale Maturität (Sekundär II) & 10 (4.1)\\
-  & Höhere Fachschule (Tertiär) & 52 (21.4)\\
-  & Uni / Fachhochschule (Tertiär) & 79 (32.5)\\
-  & Doktorat (Tertiär) & 10 (4.1)\\
-  & keine Angabe & 1 (.4)\\
+  & Obligatorische Grundschule & 6 (2.8)\\
+  & Lehrabschluss (Sekundär II)& 52 (23.9)\\
+  & Berufsmatura / Fachmittelschule (Sekundär II) & 19 (8.7)\\
+  & Gymnasiale Maturität (Sekundär II) & 8 (3.7)\\
+  & Höhere Fachschule (Tertiär) & 50 (22.9)\\
+  & Uni / Fachhochschule (Tertiär) & 73 (33.5)\\
+  & Doktorat (Tertiär) & 9 (4.1)\\
+  & keine Angabe & 1 (.5)\\
+  
+  \multicolumn{2}{l}{Bildungsabschluss zusammengefasst} \\
+  & Obligatorische Grundschule & 6 (2.8)\\
+  & Sekundar II & 79 (36.2)\\
+  & Tertiär & 132 (60.6)\\
+  & keine Angabe & 1 (.5)\\
   
   \multicolumn{2}{l}{Anzahl Personen im haushalt} \\
-  & & \\
+  &  $M$ (Min./Max.) & 3.6 (2/8)\\
+  & $SD$ &  .8\\
   
   \multicolumn{2}{l}{Lebensform} \\
-  & & \\
-  \hline
-  &&\\
-\end{tabular}
-\caption{Gesamtstichprobe}
-\label{table:Gesamtstichprobe}
-\end{table}
+  & alleinstehend, verheiratet & 2 (.9)\\
+  & alleinstehend, nicht verheiratet & 3 (1.4)\\
+  & in Partnerschaft, verheiratet & 156 (71.6)\\
+  & in Partnerschaft, nicht verheiratet & 55 (25.2)\\
+  & in einer WG, verheiratet & 1 (.5)\\
+  & in einer WG, nicht verheiratet & 1 (.5)\\
+  
+  \multicolumn{2}{l}{Fremdbetreuung in Tagen} \\
+  &  $M$ (Min./Max.) & 1.0 (0/5)\\
+  & $SD$ &  1.3\\
+\end{longtable}
