Small changes: titleref für Anhänge durch ref ersetzt. Sec.Methode: Anreize und Stichprobe Wettberwerb VPN

--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -4,7 +4,7 @@ Die Durchführung dieser Arbeit erfolgte im Frühlingssemester 2018 im Rahmen ei
 
 In einem ersten Schritt wurde, basierend auf der theoretischen Vorarbeit, ein standardisierter Fragebogen anhand der für die Beantwortung der Fragestellung notwendigen Konstrukte \textit{Bindung}, \textit{Stress}, \textit{Medienverhalten} und \textit{subjektives Wohlbefinden}, sowie der soziodemografischen Daten zusammengestellt. Dazu wurden soweit als möglich bereits normierte und validierte Instrumente oder Teile aus bereits existierender Umfragen verwendet. Die Umfrage erfolgte elektronisch über das Internet und setze sich aus einer kurzen Erläuterung der Studie, sowie entsprechende Anweisungen zur Beantwortung der Fragen und den ausgewählten Erhebungsinstrumenten zusammen. 
 
-Die Umsetzung des Fragebogens richtete sich an die von der Umfragesoftware \textit{Enterprise Feedback Suite} der Firma \citeA{Questback2018} vorgegebenen Frageoptionen (ein Auszug des Fragebogens ist in angepasster Form im Anhang \titleref{app:Fragebogen} zu finden). Gestartet wurde die Umfrage mit einer kurzen Einführung, mit der Anonymitätserklärung, dem Hinweis auf den Wettbewerb und die Versuchspersonenstunden. Danach folgten die einzelnen Erhebungsinstrumente, beginnend mit der Erfassung der demographischen Daten, gefolgt vom Mediennutzungs-Fragebogen, dem Bindungsfragebogen, dem Stressfragebogen und dem Fragebogen zum subjektiven Wohlbefinden. Am Ende der Befragung konnten sich die Teilnehmer für die Teilnahme an einem Wettbewerb oder dem Erhalt für Versuchspersonenstunden, wenn sie Studierende der ZHAW in Psychologie waren, entscheiden. Zudem mussten die Teilnehmen angeben, ob sie die Fragen seriös ausgefüllt hatten. Der Fragebogen wurde mittels Pretest auf seine Funktionalität hin überprüft und erfolgte in zwei Schritten. Einerseits erlaubte die Software eine elektronische Testung des Fragebogens auf Korrektheit betreffend der möglichen Antwortpfaden. Dabei ging es um die Auswählbarkeit der Frageoptionen und die Erreichbarkeit aller aufgestellter Frageitems. In einem weiteren Schritt wurden fünf willkürlich ausgewählte Testpersonen aus dem Bekanntenkreis des Autoren als Testpersonen rekrutiert, die den kompletten Umfragebogen durchspieltn. Damit sollte sichergestellt werden, dass die Fragen und deren Anweisungen verständlich formuliert wurden und die Beantwortung der Fragen möglich war. Vor der Aktivschaltung des Fragebogens wurden alle bis dahin erfassten Daten der Tester gelöscht und die gesamte Umfrage frisch initialisiert.
+Die Umsetzung des Fragebogens richtete sich an die von der Umfragesoftware \textit{Enterprise Feedback Suite} der Firma \citeA{Questback2018} vorgegebenen Frageoptionen (ein Auszug des Fragebogens ist in angepasster Form im Anhang \ref{app:Fragebogen} zu finden). Gestartet wurde die Umfrage mit einer kurzen Einführung, mit der Anonymitätserklärung, dem Hinweis auf den Wettbewerb und die Versuchspersonenstunden. Danach folgten die einzelnen Erhebungsinstrumente, beginnend mit der Erfassung der demographischen Daten, gefolgt vom Mediennutzungs-Fragebogen, dem Bindungsfragebogen, dem Stressfragebogen und dem Fragebogen zum subjektiven Wohlbefinden. Am Ende der Befragung konnten sich die Teilnehmer für die Teilnahme an einem Wettbewerb oder dem Erhalt für Versuchspersonenstunden, wenn sie Studierende der ZHAW in Psychologie waren, entscheiden. Zudem mussten die Teilnehmen angeben, ob sie die Fragen seriös ausgefüllt hatten. Der Fragebogen wurde mittels Pretest auf seine Funktionalität hin überprüft und erfolgte in zwei Schritten. Einerseits erlaubte die Software eine elektronische Testung des Fragebogens auf Korrektheit betreffend der möglichen Antwortpfaden. Dabei ging es um die Auswählbarkeit der Frageoptionen und die Erreichbarkeit aller aufgestellter Frageitems. In einem weiteren Schritt wurden fünf willkürlich ausgewählte Testpersonen aus dem Bekanntenkreis des Autoren als Testpersonen rekrutiert, die den kompletten Umfragebogen durchspieltn. Damit sollte sichergestellt werden, dass die Fragen und deren Anweisungen verständlich formuliert wurden und die Beantwortung der Fragen möglich war. Vor der Aktivschaltung des Fragebogens wurden alle bis dahin erfassten Daten der Tester gelöscht und die gesamte Umfrage frisch initialisiert.
 
 Nach der Fertigstellung der Umfrage wurde diese für die Teilnehmer online verfügbar gemacht. Ab diesem Zeitraum fand die Rekrutierung und die Vorarbeit für die theoretische Auswertung der Resultate statt.
 
@@ -33,9 +33,9 @@ Für die Erfassung des Bindungsstils (\textit{engl. attachment}) wurde der von \
 
 Der AAS Fragebogen besteht aus insgesamt 18 Items, die auf einer fünfstufigen Likert-Skala von \enquote{stimmt gar nicht} (1), \enquote{stimmt eher nicht} (2), \enquote{stimmt teils / teils} (3), \enquote{stimmt eher} (4) bis \enquote{stimmt genau} (5) eingeschätzt werden. Dabei werden die Skalenwerte als Summenwerte der Itemantworten jeder Skala berechnet. Der Fragebogen bezieht sich auf bindungsrelevante Einstellungen der Befragten und wird mit drei Bindungsskalen erhoben: Die Skala \textit{Nähe} (1) beschreibt das Ausmass, in dem sich eine Person mit Nähe wohl fühlt und diese Nähe nicht mit übermässigen Ängsten verbindet. Die Skala \textit{Vertrauen} (2) beschreibt das Ausmass, in dem eine Person darauf vertraut, dass andere für sie verfügbar sind und dass die Person sich diesen anderen gegebenenfalls tatsächlich anvertrauen kann. Die Skala \textit{Angst} (3) beschreibt in erster Linie Ängste, allein gelassen oder verlassen zu werden. Was sich in einem übermässigen Bedürfnis nach Nähe aus, oder in Befürchtungen, der andere würde diese Bedürnisse zurückweisen. 
 
-Gemäss der Prüfung der Faktorenstruktur des AAS durch \citeA{Schmidt2004} wurden die Elemente 2 und 9 auf Basis der inhaltlichen Ambivalenz der Itemformulierung und der Ergebnisse der konfirmatorischen Faktorenanalyse eliminiert. Diese Reduktion führte zu einer fünf-Item-Version der Skala Nähe und Angst. Die dadurch erhaltene interne Konsistenz (Reliabilität) erreichte in der Untersuchung von \citeA{Schmidt2004} ein $\alpha$ von 0,80 für die Skala Nähe, ein $\alpha$ von 0,72 für die Skala Vertauen und ein $\alpha$ von 0,78 für die Skala Angst. Somit lieferte die überarbeitete Version gemäss \citeA{Buehner2011} niedrige bis mittlere Werte und sind somit zufriedenstellend (Endgültige Version siehe Anhang \titleref{app:AAS}).
+Gemäss der Prüfung der Faktorenstruktur des AAS durch \citeA{Schmidt2004} wurden die Elemente 2 und 9 auf Basis der inhaltlichen Ambivalenz der Itemformulierung und der Ergebnisse der konfirmatorischen Faktorenanalyse eliminiert. Diese Reduktion führte zu einer fünf-Item-Version der Skala Nähe und Angst. Die dadurch erhaltene interne Konsistenz (Reliabilität) erreichte in der Untersuchung von \citeA{Schmidt2004} ein $\alpha$ von 0,80 für die Skala Nähe, ein $\alpha$ von 0,72 für die Skala Vertauen und ein $\alpha$ von 0,78 für die Skala Angst. Somit lieferte die überarbeitete Version gemäss \citeA{Buehner2011} niedrige bis mittlere Werte und sind somit zufriedenstellend (Endgültige Version siehe Anhang \ref{app:AAS}).
 
-Die Operationalisiserung erfolgte anhand der Indizes für die drei Skalen Nähe, Vertrauen und Angst (siehe Formel \titleref{eq:IndexNähe}, \titleref{eq:IndexVertrauen}, \titleref{eq:IndexAngst}). Dabei wurden die Mittelwerte aus den Skalenzugehörigen Items anhand des Likertskalenwerts 1 bis 5 jeder Person berechnet. Zu beachten ist, dass alle Items in der Skala Nähe und die Items $AAS_{5}$, $AAS_{10}$, $AAS_{15}$ und $AAS_{17}$ der Skala Vertrauen für die Erstellung des Skalenwerts umkodiert werden müssen (im Anhang \titleref{app:AAS} mit einem * gekennzeichnet). Je höher die Mittelwerte der Skalen, desto grösser die entsprechende Ausprägung. Tendenziell heisst das bei der Skala Nähe, dass Menschen mit einem hohen Wert, sich bei Nähe zu anderen Menschen eher wohl fühlen. Hohe Ausprägungen bei der Skala Vertrauen geht tendenziell mit einem grösseren Vertrauen anderen Menschen gegenüber einher. Je höher die Werte der Skala Angst, desto eher fürchtet sich ein Mensch alleine gelassen zu werden.
+Die Operationalisiserung erfolgte anhand der Indizes für die drei Skalen Nähe, Vertrauen und Angst (siehe Formel \ref{eq:IndexNähe}, \ref{eq:IndexVertrauen}, \ref{eq:IndexAngst}). Dabei wurden die Mittelwerte aus den Skalenzugehörigen Items anhand des Likertskalenwerts 1 bis 5 jeder Person berechnet. Zu beachten ist, dass alle Items in der Skala Nähe und die Items $AAS_{5}$, $AAS_{10}$, $AAS_{15}$ und $AAS_{17}$ der Skala Vertrauen für die Erstellung des Skalenwerts umkodiert werden müssen (im Anhang \ref{app:AAS} mit einem * gekennzeichnet). Je höher die Mittelwerte der Skalen, desto grösser die entsprechende Ausprägung. Tendenziell heisst das bei der Skala Nähe, dass Menschen mit einem hohen Wert, sich bei Nähe zu anderen Menschen eher wohl fühlen. Hohe Ausprägungen bei der Skala Vertrauen geht tendenziell mit einem grösseren Vertrauen anderen Menschen gegenüber einher. Je höher die Werte der Skala Angst, desto eher fürchtet sich ein Mensch alleine gelassen zu werden.
 %Formel
 \begin{equation}\label{eq:IndexNähe}
     AAS~I_{\text{\textit{N{\"a}he}}}=6-\frac{AAS_{3}+AAS_{8}+AAS_{13}+AAS_{14}+AAS_{18}}{5}
@@ -56,9 +56,9 @@ Für die Erfassung der aktuellen subjektiv erlebten Belastung, wurde der \textit
 
 Die Autoren \citeA{Levenstein1993} schlagen vor, das Instrument für Untersuchungen von Zusammenhängen zwischen Stresserleben und Krankheitsentwicklung zu verwenden. Auch wenn in dieser Arbeit weder vom Medienverhalten noch vom subjektiven Wohlbefinden als Krankheit gesprochen werden kann, so sollen die Vorzüge dieses Instruments bezüglich der ökonomisch Durchführbarkeit, die Eignung zur Erfassung möglichst verschiedener Lebenskontexten von Erwachsenen und die Fokussierung auf das gegenwärtige Erleben hervorgehoben werden \cite{Fliege2001}. Bezüglich der empirischen Prüfung und Gütekriterien dieses Testinstruments kann gemäss \citeA{Naescher2009} von einer Auswertungsobjektivität, einer mittleren bis hohen Realiabilität und einer soliden Valildierung ausgegangen werden. Der Perceived Stress Questionnaire \cite{Fliege2001} ist für alle Erwachsenen und für verschiedene Lebenssituationen geeignet. Die deutsche Stichprobe, auf die sich die Werte beziehen, wurde an Probanden zwischen 17 und 79 Jahren erhoben. Der Fragebogen kann gemäss \citeA{Naescher2009} zur Diagnostik des subjektiven Belastungserlebens bei Erwachsenen zweifellos empfohlen werden.
 
-Durch die Validierung und Übersetzung des originalen Fragebogens ins Deutsche, wurden die ursprünglich 30 Items, basierend auf der durchgeführten exploratorischen Faktorenanalyse, auf 20 reduziert. Dadurch entstand die in dieser Arbeit verwendete Kurzversion dieses Fragebogens. Das Verfahren ist im \enquote{Elektronischen Testarchiv} des ZPID enthalten kann für nichtkommerzielle Forschungs- und Unterrichtszwecke kostenlos eingesetzt werden \cite{ZPID}. Ebenso konnten die ursprünglich siebenfaktorielle Zuordnung der Items nicht beibehalten werden. Folgende vier Skalen blieben dabei übrig: (1) Sorgen, (2) Anspannung, (3) Freude und (4) Anforderungen. Diese Veränderungen sind nachvollziehbar und bei \citeA{Fliege2001} ausführlich dokumentiert. Die Einschätzung erfolgt über eine viertstufige Likertskale, die von 1 für \textit{fast nie}, über 2 für \textit{manchmal}, 3 für \textit{häufig} bis zu 4 für \textit{meistens} reicht. Bei den Items handelt es sich um Feststellungen, die von der Testperson beurteilt werden sollen (siehe dazu auch Anhang \titleref{app:PSQ}. 
+Durch die Validierung und Übersetzung des originalen Fragebogens ins Deutsche, wurden die ursprünglich 30 Items, basierend auf der durchgeführten exploratorischen Faktorenanalyse, auf 20 reduziert. Dadurch entstand die in dieser Arbeit verwendete Kurzversion dieses Fragebogens. Das Verfahren ist im \enquote{Elektronischen Testarchiv} des ZPID enthalten kann für nichtkommerzielle Forschungs- und Unterrichtszwecke kostenlos eingesetzt werden \cite{ZPID}. Ebenso konnten die ursprünglich siebenfaktorielle Zuordnung der Items nicht beibehalten werden. Folgende vier Skalen blieben dabei übrig: (1) Sorgen, (2) Anspannung, (3) Freude und (4) Anforderungen. Diese Veränderungen sind nachvollziehbar und bei \citeA{Fliege2001} ausführlich dokumentiert. Die Einschätzung erfolgt über eine viertstufige Likertskale, die von 1 für \textit{fast nie}, über 2 für \textit{manchmal}, 3 für \textit{häufig} bis zu 4 für \textit{meistens} reicht. Bei den Items handelt es sich um Feststellungen, die von der Testperson beurteilt werden sollen (siehe dazu auch Anhang \ref{app:PSQ}. 
 
-Die Operationalisierung erfolgte anhand der Anleitung von \citeA{Naescher2009}. Dabei wurden die Indizes der vier Skalen Sorgen, Anspannung, Freude und Anforderungen mit Hilfe der Mittelwertsbildung erstellt (siehe \titleref{eq:PSQIndexSorgen}, \titleref{eq:PSQIndexAnspannung}, \titleref{eq:PSQIndexFreude} und \titleref{eq:PSQIndexAnforderung}). Dazu werden die jeweiligen Items der zugehörigen Skala aufaddiert und durch deren Anzahl dividiert. Hohe Werte in einer Skala bedeuten jeweils auch eine hohe Ausprägung der betreffenden Eigenschaft.
+Die Operationalisierung erfolgte anhand der Anleitung von \citeA{Naescher2009}. Dabei wurden die Indizes der vier Skalen Sorgen, Anspannung, Freude und Anforderungen mit Hilfe der Mittelwertsbildung erstellt (siehe \ref{eq:PSQIndexSorgen}, \ref{eq:PSQIndexAnspannung}, \ref{eq:PSQIndexFreude} und \ref{eq:PSQIndexAnforderung}). Dazu werden die jeweiligen Items der zugehörigen Skala aufaddiert und durch deren Anzahl dividiert. Hohe Werte in einer Skala bedeuten jeweils auch eine hohe Ausprägung der betreffenden Eigenschaft.
 
 %Formel
 \begin{equation}\label{eq:PSQIndexSorgen}
@@ -74,7 +74,7 @@ Die Operationalisierung erfolgte anhand der Anleitung von \citeA{Naescher2009}. 
     PSQ~I_{Anforderung}=\frac{\frac{PSQ_{02}+PSQ_{03}+PSQ_{11}+(5-PSQ_{19})+PSQ_{20}}{5}-1}{3}*100
 \end{equation}
 
-Zu beachten ist, dass gewisse Items für die Berechnung der Indizes umkodiert werden müssen. Hierbei handelt es sich um die drei Items $PSQ_{01}$, $PSQ_{06}$ und $PSQ_{19}$ (im Anhang \titleref{app:PSQ} mit einem * gekennzeichnet).
+Zu beachten ist, dass gewisse Items für die Berechnung der Indizes umkodiert werden müssen. Hierbei handelt es sich um die drei Items $PSQ_{01}$, $PSQ_{06}$ und $PSQ_{19}$ (im Anhang \ref{app:PSQ} mit einem * gekennzeichnet).
 
 Zudem wird von \citeA{Naescher2009} eine Skalenrange-Transformation von 0 bis 100 vorgeschlagen. Dazu wird aus dem Mittelwert der Skala mit dem Skalenranges von 1 bis 4 durch Subtraktion von 1 eine lineare Transformation zu 0 bis 3 vorgenommen. Die weitere lineare Transformation mittels Division durch 3 ergibt einen Wert zwischen 0 und 1, welcher multipliziert mit 100 ein Skalenrange zwischen 0 und 100 ergibt.  
 
@@ -103,18 +103,18 @@ Die Operationalisierung erfolgt anhand der Mittelwertsbildung der vier Items \ci
 \subsection{Datenerhebung \& Rekrutierung}
 Zur Datengewinnung wurde die von der ZHAW zur Verfügung gestellten Umfragesoftware Enterprise Feedback Suite in der Version 10.9 der Firma \citeA{Questback2018} verwendet. Der Fragebogen wurde mit Hilfe der zur Verfügung gestellten Dokumentation kreiert \cite{EFS2016} und wurde Mitte Januar bis Ende Mai 2018 aktiv geschaltet.  Der Zugang zur Befragung erfolgte über die von der Firma \citeA{Questback2018} zur Verfügung gestellten öffentlichen Internetadresse, welche zum Zeitpunkt der Befragung wie folgt lautete: https://ww2.unipark.de/uc/elternfragebogen/.
 
-Die Rekrutierung erfolgte im Sinne einer Gelegenheitsstichprobe, da das Ziel dieser Untersuchungen in der Erfassung der Veränderung der abhängigen Varibalen Mediennutzung anhand der unabhängigen Variablen Bindung und Stress ist und sich dieses Vorgehen als ökonomisch und praktikabel im Hinblick auf die Forschungsfrage herausstellte \cite{TUDresden2015}. Für den Versand der Umfrage wurde ein Infomail und ein Infozettel (Flyer) mit den wichtigsten Angabe zur Studie und dem Link zur Umfrage erstellt (siehe dazu \titleref{app:Mailing} und \titleref{app:Flyer} im Anhang). Der Flyer wurde zusätzlich in Papierform ausgedruckt. Für den Versand des Flyers und des Infomailings wurden unterschiedliche Kanäle verwendet: Einerseits wurden diese per Post für die jeweilige Auslage und den Aushang versendet, andererseits erfolgte der Versand elektronisch über Mail, Facebook-Posting und Text-Nachrichten. Zudem wurde der Flyer auf unterschiedlichen einschlägigen Webseiten publiziert. Um den Medienbruch möglichst gering zu halten, wurde wann immer möglich versucht, den Link für die Umfrage elektronisch zugänglich zu machen. 
+Die Rekrutierung erfolgte im Sinne einer Gelegenheitsstichprobe, da das Ziel dieser Untersuchungen in der Erfassung der Veränderung der abhängigen Varibalen Mediennutzung anhand der unabhängigen Variablen Bindung und Stress ist und sich dieses Vorgehen als ökonomisch und praktikabel im Hinblick auf die Forschungsfrage herausstellte \cite{TUDresden2015}. Für den Versand der Umfrage wurde ein Infomail und ein Infozettel (Flyer) mit den wichtigsten Angabe zur Studie und dem Link zur Umfrage erstellt (siehe dazu \ref{app:Mailing} und \ref{app:Flyer} im Anhang). Der Flyer wurde zusätzlich in Papierform ausgedruckt. Für den Versand des Flyers und des Infomailings wurden unterschiedliche Kanäle verwendet: Einerseits wurden diese per Post für die jeweilige Auslage und den Aushang versendet, andererseits erfolgte der Versand elektronisch über Mail, Facebook-Posting und Text-Nachrichten. Zudem wurde der Flyer auf unterschiedlichen einschlägigen Webseiten publiziert. Um den Medienbruch möglichst gering zu halten, wurde wann immer möglich versucht, den Link für die Umfrage elektronisch zugänglich zu machen. 
 
-Die Rekrutierung fand an folgenden Orten und Institutionen statt (für eine detaillierte Übersicht, siehe Anhang \titleref{app:Rekrutierung}): Direkt an der ZHAW, über die Elternberatungsstellen der deutschsprachigen Schweiz \cite{Sfmvb2018}, über Spitäler mit Wochenbett und Kinderärzte, über die deutschsprachigen Familienzentren \cite{NetzwerkBildung2018}, über die Anschrift aller deutschsprachiger Niederlassungen der \citeA{Elternbildung2018} und über das private Umfeld des Autors, mit der Bitte, die Umfrage im eigenen Umkreis weiter zu verteilen. Zudem wurde die Umfrage auf der Internetplattform der Elternzeitschrift \enquote{Fritz \&  Fränzi}, dem Marktplatz des Elternmagazins \enquote{Wir Eltern} und dem Forum der Internetplattform \enquote{Swissmom} publiziert.
+Die Rekrutierung fand an folgenden Orten und Institutionen statt (für eine detaillierte Übersicht, siehe Anhang \ref{app:Rekrutierung}: Direkt an der ZHAW, über die Elternberatungsstellen der deutschsprachigen Schweiz \cite{Sfmvb2018}, über Spitäler mit Wochenbett und Kinderärzte, über die deutschsprachigen Familienzentren \cite{NetzwerkBildung2018}, über die Anschrift aller deutschsprachiger Niederlassungen der \citeA{Elternbildung2018} und über das private Umfeld des Autors, mit der Bitte, die Umfrage im eigenen Umkreis weiter zu verteilen. Zudem wurde die Umfrage auf der Internetplattform der Elternzeitschrift \enquote{Fritz \&  Fränzi}, dem Marktplatz des Elternmagazins \enquote{Wir Eltern} und dem Forum der Internetplattform \enquote{Swissmom} publiziert.
 
-\textit{TBD: Anreiz} Wettbewerb und VPN Stunden...
+Um für die der Rekrutierung möglichst viele Eltern für die Teilnahme an der Umfrage zu gewinnen, wurde mittels Wettbewerb und Versuchspersonenstunden Anreize für die Teilnahme geschaffen. Beim Wettbewerb handelte es sich um Warengutscheine bei einem renomierten Onlineshop für Babybedarf von 10 x CHF 50.- (www.baby-rose.ch). Dabei wurde am Ende des Fragebogens die Möglichkeit geboten, am Wettbewerb teilzunehmen und die eigene Emailadresse für die Benachrichtigung zu hinterlegen. Am Schluss der Rekrutierungsphase wurden die Gewinner per Zufall gezogen. Dazu wurden alle Wettberwerbsteilnehmen in eine separate Liste kopiert und nummeriert. Anschlissend wurde mittels minimal Pythonskript zehn Teilnehmer randomieisert ausgewählt. Diese wurden mittels Mail über ihren Gewinn informiert. Studierende der ZHAW in Angewandter Psychologie konnten sich 0.5 Versuchspersonenstunden anrechenen lassen, wenn sie die Umfrage durchführten. 
 
 \subsection{Beschreibung der Stichprobe}
 Insgesamt schlossen brutto 248 Personen die Umfrage ab. 1454 Personen sind zumindest auf die erste Seite gekommen und haben anschliessend abgebrochen. Dies entspricht einer Beendingungsquote von 17.06\%. Die meisten Abbrüche sind auf der Startseite mit 1045 zu verzeichnen (71.87\%), gefolgt von den demografischen Daten mit 100 (6.88\%) und Medien und Mediennutzung mit 44 (3\%). Die mittlere Bearbeitungszeit des Fragebogens dauerte 27 Minuten. 
 
 Nach der Datenbereinigung blieben netto 218 Personen übrig (87.9\%). Eine Personen wurde ausgemustert, da sie beim Jahrgang einen fehlerhaften Wert angegeben hatte (Jg 2017). Zwei weitere Person gaben an, die Umfrage nicht seriös ausgefüllt zu haben. Zwei Personen mussten entfernt werden, da die Personen bei der Angabe der Mediennutzungszeit in Minuten mit Ja und Nein geantwortet haben. 25 Personen wurden entfernt, da das Alter ihrer Kinder 13 Monate überstieg. 
 
-Die Merkmale Geschlecht, Alter in Jahren, Geschlecht Kind und Alter Kind in Jahren werden in Tabelle \titleref{table:Stichprobe} dargestellt (eine um die Merkmale Familieneinkommen, Bidlungsabschluss, Anzahl Personen im Haushalt, Lebensfrom und Fremdbeteruung in Tagen ist in Anhang \titleref{app:Gesamtstichprobe} zu finden).
+Die Merkmale Geschlecht, Alter in Jahren, Geschlecht Kind und Alter Kind in Jahren werden in Tabelle \titleref{table:Stichprobe} dargestellt (eine um die Merkmale Familieneinkommen, Bidlungsabschluss, Anzahl Personen im Haushalt, Lebensfrom und Fremdbeteruung in Tagen ist in Anhang \ref{app:Gesamtstichprobe} zu finden).
 
 \begin{table}[htbp]
 
@@ -148,11 +148,13 @@ Die Merkmale Geschlecht, Alter in Jahren, Geschlecht Kind und Alter Kind in Jahr
 
 Das Alter der Befragten liegt zwischen 20 und 48 Jahre mit einem Durchschnittsalter von 33.9 Jahren ($SD$ = 4.5). Weibliche Probanden sind mit 90.8 \% ($n$ = 198) in der Stichprobe vertreten. Das Geschlecht der Kinder ist mit 44.5\% weiblichen ($n$ = 97) und 54.6\% männlichen ($n$ = 119) Kindern vertreten. Das Alter der Kinder liegt zwischen 0 und 12 Monaten mit einem Durchschnitt von 6.6 Monaten ($SD$ = 3.4).
 
-Bei der Angabe zum Familieneinkommen (siehe Tabelle \titleref{table:Gesamtstichprobe} im Anhang \titleref{app:Gesamtstichprobe}) zeigt sich die stärkste Ausprägung bei Personen, die über ein Familieneinkommen von über CHF 104'001 und mehr verfügen mit 34.3\% ($n$ = 75), gefolgt von Familien mit einem Einkommen zwischen CHF 78'001 und CHF 104'000 mit 30.3\% ($n$ = 66) und Familien mit einem Einkommen zwischen CHF 52'000 und CHF 78'000 mit 23.9\% ($n$ = 52). 
+Bei der Angabe zum Familieneinkommen (siehe Tabelle \titleref{table:Gesamtstichprobe} im Anhang \ref{app:Gesamtstichprobe}) zeigt sich die stärkste Ausprägung bei Personen, die über ein Familieneinkommen von über CHF 104'001 und mehr verfügen mit 34.3\% ($n$ = 75), gefolgt von Familien mit einem Einkommen zwischen CHF 78'001 und CHF 104'000 mit 30.3\% ($n$ = 66) und Familien mit einem Einkommen zwischen CHF 52'000 und CHF 78'000 mit 23.9\% ($n$ = 52). 
 
 73 Personen gaben an über ein Uni oder Fachhochschultitel zu verfügen, was mit 33.5\% die höchste Ausprägung darstellt, dicht gefolgt von einem Lehrabschluss mit 23.9\% ($n$ = 52) und einem Abschluss an einer höheren Fachschule mit 22.9\% ($n$ = 50). Zusammenfassend ergibt das einen Abschluss im tertiären Bereich von 60.6\% ($n$ = 132), im Sekundar II Bereich von 36.6\% ($n$ = 79) und im Bereich der Grundschule 2.8\% ($n$ = 6).
 
 Im Durchschnitt leben zwischen 2 und 8 Personen im Haushalt mit einem Durchschnitt von 3.6 Personen ($SD$ = .8). Die dominante Lebensform stellt die verheiratete Partnerschaft mit 71.6\% ($n$ = 156) dar, gefolgt von der nicht verheirateten Partnerschaft mit 25.2\% ($n$ = 55). Die Kinder werden im Schnitt 1 Tag ($SD$ = 1.3)  zwischen 0 und 5 Tagen fremd betreut.
+
+Insgesamt haben 158 Personen am Wettbewerb teilgenommen, was 72.5\% der Stichprobe entspricht. Eine Person liess sich Versuchspersonen anrechnen (.5\%) und 59 (27\%) Personen wollten weder am Wettbewerb teilnehmen noch sich Versuchspersonenstunden anrechnen lassen.
 
 \subsection{Empirische Hypothesen}\label{sec:EmpirischeHypothesen}
 \subsection{Statistische Analyseverfahren}
